animation verre + 2 html au lieu de 11

--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocktails</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Liste de nos meilleurs cocktails</h1>
+    
     <ul>
-        <li><a href="mojito.html">Mojito</a></li>
-        <li>Gin Tonic</li>
-        <li>Bloody Mary</li>
-        <li>Planteur</li>
-        <li>Horse's Neck</li>
-        <li>Mary Pickford</li>
-        <li>Grand Blue</li>
-        <li>Absolut Stress</li>
-        <li>Kiwi Lemon</li>
-        <li>Yellow Bird</li>
+        <li><a href="drink.html?drink=mojito">Mojito</a></li>
+        <li><a href="drink.html?drink=gin_tonic">Gin Tonic</a></li>
+        <li><a href="drink.html?drink=bloody_mary">Bloody Mary</a></li>
+        <li><a href="drink.html?drink=planter">Planteur</a></li>
+        <li><a href="drink.html?drink=horse">Horse's Neck</a></li>
+        <li><a href="drink.html?drink=mary_pickford">Mary Pickford</a></li>
+        <li><a href="drink.html?drink=grand_blue">Grand Blue</a></li>
+        <li><a href="drink.html?drink=absolut_stress">Absolut Stress</a></li>
+        <li><a href="drink.html?drink=kiwi_lemon">Kiwi Lemon</a></li>
+        <li><a href="drink.html?drink=yellow_bird">Yellow Bird</a></li>
     </ul>
-    <script src="api.js"></script>
 </body>
-
 </html>
