centrer texte + verre à gauche

--- a/drink.html
+++ b/drink.html
@@ -13,9 +13,9 @@
 
     <h1 id="name" class="chalk"></h1>
     <h3 class="chalk">Ingrédients</h3> 
-    <ul id="Ingrédients"></ul>
+    <ul id="Ingrédients" class="chalk"></ul>
     <h3 class="chalk">Instructions</h3>
-    <ol id="Instructions"></ol>
+    <ol id="Instructions" class="chalk"></ol>
 
     <div class="glass-ctr">
         <div class="glass"></div>
