arrondi verre, changement bouton d'accueil

--- a/drink.html
+++ b/drink.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button onclick="window.location.href='index.html'">Page d'accueil</button>
+    <button id="btn" onclick="window.location.href='index.html'"></button>
 
     <h1 id="name" class="chalk"></h1>
     <h3 class="chalk">Ingrédients</h3> 
