--- a/drink.html
+++ b/drink.html
@@ -20,7 +20,7 @@
     <div class="glass-ctr">
         <div class="glass"></div>
         <div class="water-ctr">
-            <div class="water"></div>
+            <div class="liquid"></div>
         </div>
     </div>
 
