--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>&
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="chalk">
     <h1>Liste de nos meilleurs cocktails</h1>
     
     <ul>
@@ -24,3 +24,4 @@
     </ul>
 </body>
 </html>
+ 
