--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="chalk">
-    <h1>Liste de nos meilleurs cocktails</h1>
+    <h1>COCKTAILS À LA CARTE</h1>
     
     <ul>
         <li><a href="drink.html?drink=mojito">Mojito</a></li>
@@ -24,4 +24,3 @@
     </ul>
 </body>
 </html>
- 
